Scrollbar fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -96,6 +96,17 @@
   }
 }
 
+/* For Webkit-based browsers  */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 /* Custom gallery page photos masonry layout */
 .masonry {
   column-count: 1;
